--- a/src/app/shared/component/dialog/dialog.component.html
+++ b/src/app/shared/component/dialog/dialog.component.html
@@ -1,81 +1,84 @@
-@if (title) {
-  <div mat-dialog-title [ngClass]="status">{{title | translate}}
-    <!-- <i class="fa-solid fa-xmark fa-fw dialog-close"
-      (click)="onClickButton({id: 'headerCloseBtn', type: 'close'})"
-      matRipple [matRippleCentered]="true"
-      [matRippleUnbounded]="true">
-    </i> -->
-    @if (subtitle) {
-      <div class="dialog-subtitle">{{subtitle | translate}}</div>
-    }
-  </div>
-}
 
-<div mat-dialog-content [ngClass]="'dialog-'+size">
-  <ng-container appComponentHost></ng-container>
-  <ng-container>{{message}}</ng-container>
-</div>
-
-@if (buttons.length>0) {
-  <div mat-dialog-actions class="justify-content-end">
-
-  @for (button of buttons; track button.id) {
-    @switch (button.type) {
-      @case ('general') {
-        <button
-          mat-raised-button
-          [disabled]="button.disable"
-          [color]="button.status?button.status:status"
-          (click)="onClickButton(button)"
-        >
-          @if (button.icon) {
-            <i [ngClass]="button.icon"></i>
-          }
-          {{button.desc ? (button.desc | translate) : ('i18n_Submit' | translate)}}
-        </button>
+<div class="dialog-container">
+  @if (title) {
+    <div mat-dialog-title [ngClass]="status">{{title | translate}}
+      <!-- <i class="fa-solid fa-xmark fa-fw dialog-close"
+        (click)="onClickButton({id: 'headerCloseBtn', type: 'close'})"
+        matRipple [matRippleCentered]="true"
+        [matRippleUnbounded]="true">
+      </i> -->
+      @if (subtitle) {
+        <div class="dialog-subtitle">{{subtitle | translate}}</div>
       }
-      @case ('close') {
-        <button
-          mat-raised-button
-          mat-dialog-close
-          [disabled]="button.disable"
-          [color]="button.status?button.status:status"
-          (click)="onClickButton(button)"
-        >
-          @if (button.icon) {
-            <i [ngClass]="button.icon"></i>
-          }
-          {{button.desc ? (button.desc | translate) : ('i18n_Close' | translate)}}
-        </button>
-      }
-      @case ('closeAll') {
-        <button
-          mat-raised-button
-          [disabled]="button.disable"
-          [color]="button.status?button.status:status"
-          (click)="onClickButton(button)"
-        >
-          @if (button.icon) {
-            <i [ngClass]="button.icon"></i>
-          }
-          {{button.desc ? (button.desc | translate) : ('i18n_Close' | translate)}}
-        </button>
-      }
-      @case ('cancel') {
-        <button
-          mat-stroked-button
-          mat-dialog-close
-          [disabled]="button.disable"
-          [color]="button.status?button.status:null"
-          (click)="onClickButton(button)"
-        >
-          @if (button.icon) {
-            <i [ngClass]="button.icon"></i>
-          }
-          {{button.desc ? (button.desc | translate) : ('i18n_Cancel' | translate)}}
-        </button>
-      }
-    }
+    </div>
   }
+
+  <div mat-dialog-content [ngClass]="'dialog-'+size">
+    <ng-container appComponentHost></ng-container>
+    <ng-container>{{message}}</ng-container>
   </div>
-}
+
+  @if (buttons.length>0) {
+    <div mat-dialog-actions class="justify-content-end">
+
+    @for (button of buttons; track button.id) {
+      @switch (button.type) {
+        @case ('general') {
+          <button
+            mat-raised-button
+            [disabled]="button.disable"
+            [color]="button.status?button.status:status"
+            (click)="onClickButton(button)"
+          >
+            @if (button.icon) {
+              <i [ngClass]="button.icon"></i>
+            }
+            {{button.desc ? (button.desc | translate) : ('i18n_Submit' | translate)}}
+          </button>
+        }
+        @case ('close') {
+          <button
+            mat-raised-button
+            mat-dialog-close
+            [disabled]="button.disable"
+            [color]="button.status?button.status:status"
+            (click)="onClickButton(button)"
+          >
+            @if (button.icon) {
+              <i [ngClass]="button.icon"></i>
+            }
+            {{button.desc ? (button.desc | translate) : ('i18n_Close' | translate)}}
+          </button>
+        }
+        @case ('closeAll') {
+          <button
+            mat-raised-button
+            [disabled]="button.disable"
+            [color]="button.status?button.status:status"
+            (click)="onClickButton(button)"
+          >
+            @if (button.icon) {
+              <i [ngClass]="button.icon"></i>
+            }
+            {{button.desc ? (button.desc | translate) : ('i18n_Close' | translate)}}
+          </button>
+        }
+        @case ('cancel') {
+          <button
+            mat-stroked-button
+            mat-dialog-close
+            [disabled]="button.disable"
+            [color]="button.status?button.status:null"
+            (click)="onClickButton(button)"
+          >
+            @if (button.icon) {
+              <i [ngClass]="button.icon"></i>
+            }
+            {{button.desc ? (button.desc | translate) : ('i18n_Cancel' | translate)}}
+          </button>
+        }
+      }
+    }
+    </div>
+  }
+</div>
