--- a/src/app/shared/component/table/table.component.html
+++ b/src/app/shared/component/table/table.component.html
@@ -1,5 +1,5 @@
 <div class="table-container noselect mat-elevation-z0" [style.height]="height() | cssHeight">
-  <div class="table-outline" style="overflow: auto;margin-right: 1px;">
+  <div class="table-outline" style="overflow: auto;">
     <!-- Virtual Scroll -->
     <cdk-virtual-scroll-viewport tvsItemSize="40" headerHeight="50" [style.height]="height() | cssHeight">
       <!-- Table -->
