--- a/src/style/_color-dark.scss
+++ b/src/style/_color-dark.scss
@@ -28,6 +28,9 @@ $dark-theme-colors: (
   scrollbar-bg-color:         #8b8b8b,
   scrollbar-thumb-bg-color:   #555,
 
+  // dialog color define
+  dialog-bg-color:            #333,
+
   // table color define
   table-color-border:         #ffffff1f,
   table-color-header-row:     #202020,
