--- a/src/style/_color.scss
+++ b/src/style/_color.scss
@@ -36,6 +36,9 @@ $theme-colors: (
   warning:                    $yellow,
   danger:                     $red,
 
+  // dialog color define
+  dialog-bg-color:            $white,
+
   // scroll bar color define
   scrollbar-shadow-color:     rgba($light-black, 0.15),
   scrollbar-bg-color:         $gray-100,
