--- a/src/style/_custom-material-light.scss
+++ b/src/style/_custom-material-light.scss
@@ -15,5 +15,6 @@ $light-theme: mat.define-light-theme((
   @include table-theme($theme-colors);
   @include scrollbar-theme($theme-colors);
   @include chips-input-theme($theme-colors);
+  @include dialog-theme($theme-colors);
 }
 
