--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -13,6 +13,7 @@
 @import "./scrollbar";
 @import "../app/shared/component/table/table.component.scss";
 @import "../app/shared/component/chips-input/chips-input.component.scss";
+@import "../app/shared/component/dialog/dialog.component.scss";
 // #endregion
 
 // #region theme
