--- a/src/app/feature/acc/demo/demo.component.html
+++ b/src/app/feature/acc/demo/demo.component.html
@@ -71,7 +71,7 @@
     }
     @case ('Chips Input') {
       <div style="width: 100%;">
-        <app-chips-input [id]="'test-chips-input'" [placeholder]="'test...'"></app-chips-input>
+        <app-chips-input [id]="'test-chips-input'" [placeholder]="'test...'" [chips]="['111','2222']"></app-chips-input>
       </div>
     }
   }
