--- a/src/style/_color-dark.scss
+++ b/src/style/_color-dark.scss
@@ -31,6 +31,10 @@ $dark-theme-colors: (
   // dialog color define
   dialog-bg-color:            #333,
 
+  // sidemenu color define
+  sidemenu-active-bg-color:   #555,
+  sidemenu-active-left:       #333,
+
   // table color define
   table-color-border:         #ffffff1f,
   table-color-header-row:     #202020,
